--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3.7'
 services:
-  redis:
-    image: redis:alpine
+  my_bot:
+    image: message_to_xamzaaff:latest
     env_file:
       - ./.env
     restart: on_failure
     ports:
-      -
+      - "6379:6379"
+  bot:
+    build: .
+    command: sh -c "make migrate && python -m bot"
+    env_file:
+      - ./.env
+    restart: always
